fix z-index

--- a/public/gbAnimation/main.css
+++ b/public/gbAnimation/main.css
@@ -119,7 +119,7 @@ body {
 	top: 200%;
 	left: 40%;
 	font-size: 6px;
-	z-index: 5;
+	z-index: 7;
 	color: #d7e894;
 	font-weight: bold;
 	transition: top 0.5s;
@@ -251,7 +251,7 @@ body {
 }
 
 .mainScreen {
-	z-index: 10;
+	z-index: 6;
     position: absolute;
     color: #aec440;
 	text-align: center;
